add método especial __eq__

--- a/Metodos_especiais.ipynb
+++ b/Metodos_especiais.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 4,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.5  ('venv': venv)"
+   "display_name": "Python 3.9.5 64-bit ('venv': venv)"
   },
   "interpreter": {
    "hash": "325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3"
@@ -145,6 +145,71 @@
     "print(p.tamanho_cpf)\n",
     "\n",
     "print(Pessoa.tamanho_cpf)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#00BFFF>__eq__</font></h3>\n",
+    "\n",
+    "habilita a comparação entre dois objetos a == a"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "class Filme():\n",
+    "    def __init__(self, titulo: str) -> None:\n",
+    "        self.titulo = titulo\n",
+    "\n",
+    "filme1, filme2, filme3 = Filme('A Teoria de Tudo'), Filme('La La Land'), Filme('A Teoria de Tudo')\n",
+    "\n",
+    "# Testando a igualdade == entre objetos\n",
+    "filme1 == filme3\n",
+    "# mesmo sabendo que filme1 é igual a filme3, recebemos um false."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\nFalse\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Filme():\n",
+    "    def __init__(self, titulo: str) -> None:\n",
+    "        self.titulo = titulo\n",
+    "    \n",
+    "    def __eq__(self, outro_filme) -> bool:\n",
+    "        return self.titulo == outro_filme.titulo\n",
+    "\n",
+    "filme1, filme2, filme3 = Filme('A Teoria de Tudo'), Filme('La La Land'), Filme('A Teoria de Tudo')\n",
+    "\n",
+    "# Testando a igualdade == entre objetos apos a implementação do __eq__\n",
+    "print(filme1 == filme3)\n",
+    "print(filme1 == filme2)"
    ]
   },
   {
