--- a/Coleções_Python_Iteraveis/Strings.ipynb
+++ b/Coleções_Python_Iteraveis/Strings.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 4,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.5  ('venv': venv)"
+   "display_name": "Python 3.9.5 64-bit ('venv': venv)"
   },
   "interpreter": {
    "hash": "325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3"
@@ -210,6 +210,221 @@
     "for indice, letra in enumerate(palavra):\n",
     "    if(letra == \"u\"):\n",
     "        print(f'A letra u esta no indice {indice}\\nObs. o indice começa com zero!')"
+   ]
+  },
+  {
+   "source": [
+    "<h2><font color=#00BFFF>Fatiamento de strings</font></h2>\n",
+    "<h3><font color=#DAA520>Argumentos exclusivos</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Gabriel\nSaldanha\n"
+     ]
+    }
+   ],
+   "source": [
+    "nome_completo = 'Gabriel Saldanha'\n",
+    "\n",
+    "# O segundo argumento passado para o operador de fatiamento é exclusivo, ou seja, não inclui o caractere naquela posição.\n",
+    "\n",
+    "primeiro_nome = nome_completo[0:7]\n",
+    "\n",
+    "ultimo_nome = nome_completo[8:16]\n",
+    "\n",
+    "print(primeiro_nome)\n",
+    "print(ultimo_nome)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Imutabilidade em fatiamentos</font></h3>\n",
+    "\n",
+    "A string original não é alterada ao ser fatiada devido à sua imutabilidade."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Gabriel\nGabriel Saldanha\n"
+     ]
+    }
+   ],
+   "source": [
+    "nome_completo = 'Gabriel Saldanha'\n",
+    "\n",
+    "# fatiando o primeiro nome\n",
+    "print(nome_completo[0:7])\n",
+    "\n",
+    "# veja que apos o fatiamento a variável nome completo esta em estado normal\n",
+    "print(nome_completo)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Usando fatiamento para extrair conteudo em url</font></h3>\n",
+    "\n",
+    "Podemos omitir o primeiro ou o segundo argumento do operador de fatiamento para fatiar uma string do início até um certo índice, ou a partir de um índice até o final. Exemplo: str[[a:]] ou str[[:b]]."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "python\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = \"https://www.alura.com.br/curso?curso=python\"\n",
+    "indice_curso = url.find(\"?\")\n",
+    "indice_valor = indice_curso + len(\"curso\") + 2\n",
+    "valor = url[indice_valor:]\n",
+    "print(valor)"
+   ]
+  },
+  {
+   "source": [
+    "<h2><font color=#00BFFF>String é Imutável!</font></h2>\n",
+    "\n",
+    "Já que strings no Python são imutáveis, não podemos atribuir um novo valor a uma string depois de criada – como tentamos fazer com palavra[0] = \"x\". Note que escrever palavra = alguma_coisa e depois palavra = outra_coisa é alterar qual objeto nossa variável referencia, mas não o valor do objeto em si (\"abc\")."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['x', 'b', 'c']\na\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-45182ad4f3b8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mpalavra\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"abc\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpalavra\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# Imprime o primeiro caractere, no caso \"a \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mpalavra\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"x\"\u001b[0m  \u001b[1;31m# Tenta alterar o primeiro caractere de \"abc\" para \"x\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "# Uma lista é mútavel, ou seja, coseguimos muda-la apos a criação\n",
+    "lista = [\"a\", \"b\", \"c\"]  # Cria uma lista com 3 elementos onde cada elemento da lista é um caractere\n",
+    "lista[0] = \"x\"\n",
+    "print(lista)  # Imprime ['x', 'b', 'c']\n",
+    "\n",
+    "# Uma string é imútavel, ou seja, NÃO coseguimos muda-la apos a criação\n",
+    "palavra = \"abc\"\n",
+    "print(palavra[0])  # Imprime o primeiro caractere, no caso \"a \"\n",
+    "palavra[0] = \"x\"  # Tenta alterar o primeiro caractere de \"abc\" para \"x\""
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Imutabilidade e economia de memória</font></h3>\n",
+    "Uma consequência interessante de objetos imutáveis é a economia de memória. Já que a string é imutável, significa que não importa quantas variáveis referenciem esta string, não precisamos nos preocupar em alocar memória múltiplas vezes (uma vez para cada variável), pois não existe o risco de o valor ser alterado."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "id(x) = 2208937731376\nid(y) = 2208937731376\n\nid(x) == id(y)? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = \"abc\"  # Reserva um espaço de memória para armazenar o valor \"abc\"\n",
+    "y = \"abc\"  # Referencia o mesmo espaço de memória reservdo para \"abc\"\n",
+    "\n",
+    "print(f'id(x) = {id(x)}\\nid(y) = {id(y)}')\n",
+    "\n",
+    "print(f'\\nid(x) == id(y)? {id(x) == id(y)}')  # Vai imprimir True!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "id(x) = 2209024602048\nid(y) = 2209024600576\n\nid(x) == id(y)? False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fazendo o mesmo exemplo com uma lista verificamos que os endereços de memória são diferentes.\n",
+    "x = [\"a\", \"b\", \"c\"]  # Reserva um espaço de memória\n",
+    "y = [\"a\", \"b\", \"c\"]  # Reserva outro espaço de memória\n",
+    "\n",
+    "print(f'id(x) = {id(x)}\\nid(y) = {id(y)}')\n",
+    "\n",
+    "print(f'\\nid(x) == id(y)? {id(x) == id(y)}')  # Vai imprimir True!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "curso=python\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = \"https://www.alura.com.br/curso?curso=python\"\n",
+    "indice_curso = url.find(\"curso\")\n",
+    "indice_valor = indice_curso + len(\"curso\") + 1\n",
+    "valor = url[indice_valor:]\n",
+    "print(valor)"
    ]
   }
  ]
