Add ex: atributos e metodos de cls e self

--- a/Orientação a Objetos/orientação_a_objetos.ipynb
+++ b/Orientação a Objetos/orientação_a_objetos.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 4,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.5  ('venv': venv)"
+   "display_name": "Python 3.9.5 64-bit ('venv': venv)"
   },
   "interpreter": {
    "hash": "325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3"
@@ -406,6 +406,187 @@
     "\n",
     "# classmethod, não precisamos estanciar, e conseguimos acessar objetos da classe.\n",
     "Teste.class_method(instancia)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Ex: artributos e métodos da class Vs atributos e métodos da instancia</font></h3>\n",
+    "\n",
+    "Em resumo, atributo e método da classe são unicos e podem ser acessados sem instanciar objetos. Qualquer objeto instanciado tem acesso a atributos e métodos da classe mas do contrário não é verdade. Um atributo e método da classe não tem acesso a atributos e métodos da instancia. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Fila():\n",
+    "    \"\"\"Abstração de qualquer tipo de fila: Supermercado, banco etc\"\"\"\n",
+    "    \n",
+    "    c_fila = [] # c de class (atributo da classe)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def c_entrar(cls, obj): # c de class (método da classe)\n",
+    "        cls.c_fila.append(obj)\n",
+    "        print(f'c_fila = {cls.c_fila}')\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.s_fila = [] # s de self (atributo da instancia)\n",
+    "\n",
+    "    def s_entrar(self, obj): # s de self (método da instancia)\n",
+    "        self.s_fila.append(obj)\n",
+    "        print(f's_fila = {self.s_fila}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "c_fila = []\nc_fila = ['Livio']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# podemos chamar atributos e métodos da classe sem instanciar:\n",
+    "print(f'c_fila = {Fila.c_fila}')\n",
+    "Fila.c_entrar('Livio')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "s_fila = []\ns_fila = ['João']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# para chamar stributos e métodos da instancia tenho que instanciar:\n",
+    "banco = Fila() #instanciando fila de banco\n",
+    "print(f's_fila = {banco.s_fila}')\n",
+    "banco.s_entrar('João')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "c_fila = ['Livio']\ns_fila = ['João']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# posso acessar c_fila(atributo da class) com instancia banco, porem são duas filas diferentes, uma fila é da class e outra é da instancia. Qualquer fila de instancia tem acesso a fila da class.\n",
+    "print(f'c_fila = {banco.c_fila}')\n",
+    "print(f's_fila = {banco.s_fila}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "c_fila = ['Livio', 'Maria']\nc_fila = ['Livio', 'Maria']\ns_fila = ['João']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# posso acionar um médodo da class pela instancia:\n",
+    "banco.c_entrar('Maria')\n",
+    "print(f'c_fila = {banco.c_fila}')\n",
+    "print(f's_fila = {banco.s_fila}')\n",
+    "# acionamos o método c_fila pela instancia e adicionamos 'Maria', mas são duas filas diferentes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "s_entrar() missing 1 required positional argument: 'obj'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-20-dc205c9b969b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# não cosigo acessar a fila da instancia sem instanciar um objeto:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mFila\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0ms_entrar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Michael'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: s_entrar() missing 1 required positional argument: 'obj'"
+     ]
+    }
+   ],
+   "source": [
+    "# não cosigo acessar a fila da instancia sem instanciar um objeto:\n",
+    "Fila.s_entrar('Michael')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "s_fila = []\ns_fila = ['Jony']\nc_fila = ['Livio', 'Maria']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# se instanciarmos outro objeto, ex: fila de supermercado. A mesma tera uma fila individual, mas terá acesso a atributo da classe igual a fila de banco.abs\n",
+    "supermercado = Fila() #instanciando fila de supermercado\n",
+    "print(f's_fila = {supermercado.s_fila}')\n",
+    "supermercado.s_entrar('Jony')\n",
+    "print(f'c_fila = {supermercado.c_fila}') # supermercado também tem acesso ao atributo da classe c_fila"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "c_fila = ['Livio', 'Maria']\ns_fila banco = ['João']\ns_fila supermercado = ['Jony']\nc_fila acessada por banco = ['Livio', 'Maria']\nc_fila acessada por supermercado = ['Livio', 'Maria']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# temos agora três filas cada uma diferente da outra, mas a instancia tem acesso a atributos e métodos da classe.abs\n",
+    "print(f'c_fila = {Fila.c_fila}') # Atributo fila da classe \n",
+    "\n",
+    "print(f's_fila banco = {banco.s_fila}') # Atributo fila da instancia banco\n",
+    "\n",
+    "print(f's_fila supermercado = {supermercado.s_fila}') # Atributo fila da instancia supermercado\n",
+    "\n",
+    "print(f'c_fila acessada por banco = {banco.c_fila}') # Atributo fila da classe sendo acessado por instancia banco\n",
+    "\n",
+    "print(f'c_fila acessada por supermercado = {supermercado.c_fila}') # Atributo fila da classe sendo acessado por instancia supermercado"
    ]
   },
   {
