add ex pizza com atributos, metodos e staticmethod

--- a/Orientação a Objetos/orientação_a_objetos.ipynb
+++ b/Orientação a Objetos/orientação_a_objetos.ipynb
@@ -591,6 +591,77 @@
   },
   {
    "source": [
+    "<h3><font color=#DAA520>Ex: artributos e métodos da class Vs atributos e métodos da instancia Vs staticmethod</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Pizza:\n",
+    "# atributo da class, uma pizza tem 8 pedaços, não importa o sabor, tem 8 pedaços e pronto. Qualquer sabor que instanciar terá 8 pedaços, por isso usamos este atributo de class.\n",
+    "    pedaços = 8 \n",
+    "\n",
+    "# agora sabor ja se trata de instancia, temos que colocar com self, pois cada sabor é um sabor.\n",
+    "    def __init__(self, sabor):\n",
+    "        self.sabor = sabor\n",
+    "\n",
+    "# mesma coisa no método de instancia pegar pedaço, uma pizza sempre irá iniar com um tamanho padrão, se você comprou uma pizza de 8 pedaços ela tera 8 pedaços, ao comer um pedaço, você esta mudando a caracteristica da pizza de um sabor especifico que você comeu e não todas as pizzas do mundo, por isso este método é um método de instancia.\n",
+    "    def pegar_pedaço(self):\n",
+    "        self.pedaços -= 1\n",
+    "\n",
+    "# mas e se quisermos mudar o tamanho da pizza, ex: pizza brotinho de 4 pedaços, podemos colocar um método de classe, porque isso em si não interfere no sabor da pizza, não importa qual sabor a pizza ser, mas uma pizza de 4 pedaços sempre terá 4 pedaços!!! \n",
+    "    @classmethod\n",
+    "    def mudar_tamanho(cls, pedaços: int = 1) -> None: \n",
+    "        cls.pedaços = pedaços\n",
+    "\n",
+    "# sabemos que toda pizza independente do tamanho ou do sabor tem igredientes, não estamos especificando aqui quais ingredientes. Simplesmente sabemos que uma pizza possui igredientes e pronto! Ou seja, igredientes não precisa conversar com a class (pizza) nem com instancia (sabor), simplesmente qualquer que seja o tamanho da pizza ou o sabor temos que ter ingredientes. Este é o conceito do staticmethod.\n",
+    "    @staticmethod\n",
+    "    def ingredientes(ingredientes: list = ['ingredientes']) -> list:\n",
+    "        return print(ingredientes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Estamos aguardando um pedido de pizza ate o momento nao sabemos o tamanho da pizza, por padrão nossa pizza possui 4 pedaços.\n\nSabemos que nossa pizza possui ['ingredientes'], mas não sabemos quais, pois ainda não recebemos o pedido.\n\nMudamos o tamanho da nossa pizza para 4 pedaços, pois o pedido é de brotinho\n\nComo já temos o pedido sabemos que os igredientes da pizza de calabreza são ['mussarela', 'molho de tomate', 'calabreza']\n\nNosso pedido é:\nPizza: calabreza\nPedaços: 4\nIngredientes: ['mussarela', 'molho de tomate', 'calabreza']\n\nCompramos uma pizza de calabreza com 4 pedaços e agora ela tem somente 3 pedaços\n"
+     ]
+    }
+   ],
+   "source": [
+    "# criando uma pizza:\n",
+    "print(f'Estamos aguardando um pedido de pizza ate o momento nao sabemos o tamanho da pizza, por padrão nossa pizza possui {Pizza.pedaços} pedaços.')\n",
+    "print(f'\\nSabemos que nossa pizza possui {Pizza.ingredientes()}, mas não sabemos quais, pois ainda não recebemos o pedido.')\n",
+    "\n",
+    "# recebemos uma ligação de um pedido de pizza brotinho de 4 pedaços de calabreza.\n",
+    "Pizza.mudar_tamanho(4)\n",
+    "print(f'\\nMudamos o tamanho da nossa pizza para {Pizza.pedaços} pedaços, pois o pedido é de brotinho')\n",
+    "\n",
+    "# verificando os ingredientes\n",
+    "print(f'\\nComo já temos o pedido sabemos que os igredientes da pizza de calabreza são {Pizza.ingredientes([\"mussarela\", \"molho de tomate\", \"calabreza\"])}')\n",
+    "\n",
+    "# Criando uma pizza\n",
+    "calabreza = Pizza('calabreza')\n",
+    "\n",
+    "print(f'\\nNosso pedido é:\\nPizza: {calabreza.sabor}\\nPedaços: {calabreza.pedaços}\\nIngredientes: {calabreza.ingredientes([\"mussarela\", \"molho de tomate\", \"calabreza\"])}')\n",
+    "\n",
+    "# Ao receber a pizza comemos um pedaço dela\n",
+    "calabreza.pegar_pedaço()\n",
+    "print(f'\\nCompramos uma pizza de {calabreza.sabor} com {Pizza.pedaços} pedaços e agora ela tem somente {calabreza.pedaços} pedaços')"
+   ]
+  },
+  {
+   "source": [
     "<h2><font color=#00BFFF>Herança</font></h2>\n",
     "\n",
     "Herança compartilha codigo com as classes filhas reduzindo a repetição de codigo. Todas as subclasses tem acesso aos métodos criados na superclasse e a herança faz com que o seu código não fique duplicado, reduzindo os pontos de falha."
