add descrição duck typing

--- a/Orientação a Objetos/orientação_a_objetos.ipynb
+++ b/Orientação a Objetos/orientação_a_objetos.ipynb
@@ -793,7 +793,7 @@
     "\n",
     "# exemplo de polimorfismo, o for objeto chama o metodo imprimir de três classes diferentes.\n",
     "for objeto in objetos:\n",
-    "    objeto.imprimir()\n"
+    "    objeto.imprimir() # duck typing!\n"
    ]
   }
  ]
