add Desempacotando uma tupla *rest ou *_

--- a/Coleções_Python_Iteraveis/Tuplas.ipynb
+++ b/Coleções_Python_Iteraveis/Tuplas.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 4,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.5  ('venv': venv)"
+   "display_name": "Python 3.9.5 64-bit ('venv': venv)"
   },
   "interpreter": {
    "hash": "325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3"
@@ -330,6 +330,58 @@
     "print('\\n')# usamos o \\n somente para ir para outra linha, pois o ultimo print esta com end=''\n",
     "for x, v in enumerate(valores): # printando com valores de posições usando enumerate\n",
     "    print(f'Na posição: {x} temos o valor {v}.')"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Desempacotando uma tupla *rest ou *_</font></h3>\n",
+    "\n",
+    "A linguagem Python recentemente adquiriu um desempacotamento de tuplas um pouco mais sofisticado para ajudar em situações em que você possa querer “arrancar” alguns elementos do início da tupla. A sintaxe especial *rest é utilizada, e é também usada em assinaturas de função para capturar uma lista arbitrariamente longa de argumentos posicionais:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1 2\n[3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "values = (1, 2, 3, 4, 5)\n",
+    "a, b, *rest = values # o nome rest não importa, o que importa é *, mas por boa pratica usamos *rest ou *_\n",
+    "print(a, b)\n",
+    "print(rest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1 2\n[3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A parte com rest às vezes é algo que você vai querer descartar; não há nada de especial \n",
+    "# acerca do nome rest. Por questão de convenção, muitos programadores Python usarão o \n",
+    "# derscore (_) para variáveis indesejadas:\n",
+    "values = (1, 2, 3, 4, 5)\n",
+    "a, b, *_ = values\n",
+    "print(a, b)\n",
+    "print(_)"
    ]
   }
  ]
