add verificação com isinstance()

--- a/Orientação a Objetos/orientação_a_objetos.ipynb
+++ b/Orientação a Objetos/orientação_a_objetos.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -702,6 +702,37 @@
     "# classe Moto herdou atributo nome e método abaster() da classe Veiculo.\n",
     "carro = Moto('titan')\n",
     "carro.abastecer(5)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Verificar se uma instancia pertence a outra com isinstance()</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "moto é instancia de Veiculo? True\ncarro é instancia de Veiculo? True\ncarro é instancia de Moto? False\ncarro é instancia de Carro? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "moto = Moto('titan')\n",
+    "veiculo = Veiculo('veiculo')\n",
+    "carro = Carro('corolla')\n",
+    "\n",
+    "print(f'moto é instancia de Veiculo? {isinstance(moto, Veiculo)}')\n",
+    "print(f'carro é instancia de Veiculo? {isinstance(carro, Veiculo)}')\n",
+    "print(f'carro é instancia de Moto? {isinstance(carro, Moto)}')\n",
+    "print(f'carro é instancia de Carro? {isinstance(carro, Carro)}')"
    ]
   },
   {
