add novas formas de Desempacotando de lista

--- a/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
+++ b/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.5  ('venv': venv)"
+   "display_name": "Python 3.9.5 64-bit ('venv': venv)"
   },
   "interpreter": {
    "hash": "325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3"
@@ -576,7 +576,7 @@
   },
   {
    "source": [
-    "<h3><font color=#DAA520>Desempacotando uma lista com for</font></h3>"
+    "<h3><font color=#DAA520>Desempacotando uma lista</font></h3>"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -606,6 +606,52 @@
     "print('\\n')# usamos o \\n somente para ir para outra linha, pois o ultimo print esta com end=''\n",
     "for x, v in enumerate(valores): # printando com valores de posições usando enumerate\n",
     "    print(f'Na posição: {x} temos o valor {v}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6]\n[(0, 15), (1, 80), (2, 30), (3, 18), (4, 4), (5, 23), (6, 40)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# desempacotando com #list | range | len | enumerate\n",
+    "idades = [15, 80, 30, 18, 4, 23, 40]\n",
+    "\n",
+    "print(list(range(len(idades)))) # forçando os valores do indice com range\n",
+    "\n",
+    "print(list(enumerate(idades))) # forçando os valores do indice com enumerate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Joao\nAna\nManuel\nJoao\nAna\nManuel\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Desempacotando com _\n",
+    "usuários = [('Joao', 37, 1981), ('Ana', 21, 1992), ('Manuel', 57, 1971)]\n",
+    "\n",
+    "for nome, idade, nascimento in usuários: # é mais elegante deixar os nomes das variaveis, pois futuramente caso seja necessário o dev verá que ali existe nascimento e idade tambem.\n",
+    "    print(nome)\n",
+    "\n",
+    "for nome, _, _ in usuários:\n",
+    "    print(nome)"
    ]
   },
   {
