add função sorted() vs método .sorted()

--- a/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
+++ b/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
@@ -411,6 +411,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[8, 10, 2, 5, 1, 2, 11]\n[1, 2, 2, 5, 8, 10, 11]\nsorted tambem possui reverse:\n[11, 10, 8, 5, 2, 2, 1]\nA lista valores continua identica:\n[8, 10, 2, 5, 1, 2, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# caso deseje não alterar a lista original dai usamos sorted()\n",
+    "valores = [8, 10, 2, 5, 1, 2, 11]\n",
+    "print(valores)\n",
+    "\n",
+    "ordenar = sorted(valores)\n",
+    "print(ordenar)\n",
+    "\n",
+    "# sorted tambem possui reverse\n",
+    "ordenar = sorted(valores, reverse=True)\n",
+    "print(f'sorted tambem possui reverse:\\n{ordenar}')\n",
+    "\n",
+    "print(f'A lista valores continua identica:\\n{valores}')"
+   ]
+  },
+  {
    "source": [
     "<h2><font color=#00BFFF>Trabalhando com listas</font></h2>"
    ],
