Ordenando um objeto com sorted ou com attrgetter

--- a/Orientação a Objetos/orientação_a_objetos.ipynb
+++ b/Orientação a Objetos/orientação_a_objetos.ipynb
@@ -591,7 +591,7 @@
   },
   {
    "source": [
-    "<h3><font color=#DAA520>Ex: artributos e métodos da class Vs atributos e métodos da instancia Vs staticmethod</font></h3>"
+    "<h3><font color=#DAA520>Ex: atributos e métodos da class Vs atributos e métodos da instancia Vs staticmethod</font></h3>"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -658,6 +658,91 @@
     "# Ao receber a pizza comemos um pedaço dela\n",
     "calabreza.pegar_pedaço()\n",
     "print(f'\\nCompramos uma pizza de {calabreza.sabor} com {Pizza.pedaços} pedaços e agora ela tem somente {calabreza.pedaços} pedaços')"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Ordenando um objeto com sorted ou com attrgetter</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Lista desordenada\ngol tem 10 litros.\nopala tem 100 litros.\nuno tem 5 litros.\ncorolla tem 25 litros.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Veiculo:\n",
+    "    \n",
+    "    def __init__(self, nome, litros=0):\n",
+    "        self.nome = nome\n",
+    "        self.litros = litros\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f'{self.nome} tem {self.litros} litros.'\n",
+    "\n",
+    "# Vamos instancia 4 veiculos cada um com uma quantidade de gasolina\n",
+    "veiculo1 = Veiculo('gol', 10)\n",
+    "veiculo2 = Veiculo('opala', 100)\n",
+    "veiculo3 = Veiculo('uno', 5)\n",
+    "veiculo4 = Veiculo('corolla', 25)\n",
+    "lista_veiculos = [veiculo1, veiculo2, veiculo3, veiculo4]\n",
+    "\n",
+    "print('Lista desordenada')\n",
+    "for veiculo in lista_veiculos:\n",
+    "    print(veiculo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "uno tem 5 litros.\ngol tem 10 litros.\ncorolla tem 25 litros.\nopala tem 100 litros.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ordenando com sorted + função\n",
+    "def extrai_litros(veiculo):\n",
+    "    return veiculo.litros\n",
+    "\n",
+    "for veiculo in sorted(lista_veiculos, key=extrai_litros):\n",
+    "    print(veiculo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "uno tem 5 litros.\ngol tem 10 litros.\ncorolla tem 25 litros.\nopala tem 100 litros.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ordenando com attrgetter\n",
+    "from operator import attrgetter\n",
+    "\n",
+    "for veiculo in sorted(lista_veiculos, key=attrgetter('litros')):\n",
+    "    print(veiculo)"
    ]
   },
   {
