--- a/Orientação a Objetos/orientação_a_objetos.ipynb
+++ b/Orientação a Objetos/orientação_a_objetos.ipynb
@@ -662,7 +662,7 @@
   },
   {
    "source": [
-    "<h3><font color=#DAA520>Ordenando um objeto com sorted ou com attrgetter</font></h3>"
+    "<h3><font color=#DAA520>Ordenando um objeto com sorted, attrgetter ou __lt__</font></h3>"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -743,6 +743,51 @@
     "\n",
     "for veiculo in sorted(lista_veiculos, key=attrgetter('litros')):\n",
     "    print(veiculo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\n\nLista ordenada crescente\nuno tem 5 litros.\ngol tem 10 litros.\ncorolla tem 25 litros.\nopala tem 100 litros.\n\nLista ordenada decrescente\nopala tem 100 litros.\ncorolla tem 25 litros.\ngol tem 10 litros.\nuno tem 5 litros.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# adicionando o método especial __lt__\n",
+    "class Veiculo:\n",
+    "    \n",
+    "    def __init__(self, nome, litros=0):\n",
+    "        self.nome = nome\n",
+    "        self.litros = litros\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f'{self.nome} tem {self.litros} litros.'\n",
+    "\n",
+    "    def __lt__(self, outro):\n",
+    "        return self.litros < outro.litros\n",
+    "\n",
+    "# Vamos instancia 4 veiculos cada um com uma quantidade de gasolina\n",
+    "veiculo1 = Veiculo('gol', 10)\n",
+    "veiculo2 = Veiculo('opala', 100)\n",
+    "veiculo3 = Veiculo('uno', 5)\n",
+    "veiculo4 = Veiculo('corolla', 25)\n",
+    "lista_veiculos = [veiculo1, veiculo2, veiculo3, veiculo4]\n",
+    "\n",
+    "print(veiculo1 < veiculo2)\n",
+    "\n",
+    "print('\\nLista ordenada crescente')\n",
+    "for veiculo in sorted(lista_veiculos):\n",
+    "    print(veiculo)\n",
+    "\n",
+    "print('\\nLista ordenada decrescente')\n",
+    "for veiculo in sorted(lista_veiculos, reverse=True):\n",
+    "    print(veiculo)\n"
    ]
   },
   {
