ordenando com attrgetter com mais de um atributo

--- a/Orientação a Objetos/orientação_a_objetos.ipynb
+++ b/Orientação a Objetos/orientação_a_objetos.ipynb
@@ -669,14 +669,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Lista desordenada\ngol tem 10 litros.\nopala tem 100 litros.\nuno tem 5 litros.\ncorolla tem 25 litros.\n"
+      "Lista desordenada\ngol tem 10 litros.\nopala tem 100 litros.\nuno tem 5 litros.\ncorolla tem 10 litros.\n"
      ]
     }
    ],
@@ -694,7 +694,7 @@
     "veiculo1 = Veiculo('gol', 10)\n",
     "veiculo2 = Veiculo('opala', 100)\n",
     "veiculo3 = Veiculo('uno', 5)\n",
-    "veiculo4 = Veiculo('corolla', 25)\n",
+    "veiculo4 = Veiculo('corolla', 10)\n",
     "lista_veiculos = [veiculo1, veiculo2, veiculo3, veiculo4]\n",
     "\n",
     "print('Lista desordenada')\n",
@@ -704,14 +704,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "uno tem 5 litros.\ngol tem 10 litros.\ncorolla tem 25 litros.\nopala tem 100 litros.\n"
+      "uno tem 5 litros.\ngol tem 10 litros.\ncorolla tem 10 litros.\nopala tem 100 litros.\n"
      ]
     }
    ],
@@ -726,14 +726,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "uno tem 5 litros.\ngol tem 10 litros.\ncorolla tem 25 litros.\nopala tem 100 litros.\n"
+      "uno tem 5 litros.\ngol tem 10 litros.\ncorolla tem 10 litros.\nopala tem 100 litros.\n"
      ]
     }
    ],
@@ -743,6 +743,29 @@
     "\n",
     "for veiculo in sorted(lista_veiculos, key=attrgetter('litros')):\n",
     "    print(veiculo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "uno tem 5 litros.\ncorolla tem 10 litros.\ngol tem 10 litros.\nopala tem 100 litros.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ordenando com attrgetter com mais de um atributo\n",
+    "from operator import attrgetter\n",
+    "\n",
+    "for veiculo in sorted(lista_veiculos, key=attrgetter('litros', 'nome')):\n",
+    "    print(veiculo)\n",
+    "\n",
+    "# agora ele ordenou por litros e caso empate ele ordena por nome."
    ]
   },
   {
