add método .copy()

--- a/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
+++ b/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
@@ -118,6 +118,40 @@
   },
   {
    "source": [
+    "<h3><font color=#DAA520>.copy()</font></h3>\n",
+    "O método copy () retorna uma cópia superficial da lista."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "frutas = ['maçã', 'banana', 'laranja', 'melancia']\n\ncopia de frutas = ['maçã', 'banana', 'laranja', 'melancia']\n\nfrutas = ['maçã', 'banana', 'laranja', 'melancia']\n\ncopia de frutas = ['maçã', 'banana', 'laranja', 'melancia', 'morango']\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
+    "print(f'frutas = {frutas}\\n')\n",
+    "\n",
+    "frutas_copy = frutas.copy()\n",
+    "print(f'copia de frutas = {frutas_copy}\\n')\n",
+    "\n",
+    "frutas_copy.append('morango')\n",
+    "\n",
+    "print(f'frutas = {frutas}\\n')\n",
+    "print(f'copia de frutas = {frutas_copy}\\n')"
+   ]
+  },
+  {
+   "source": [
     "<h3><font color=#DAA520>.count()</font></h3>\n",
     "Um jeito fácil de contar o número de ocorrências de um determinado elemento em uma lista é a função .count() das listas"
    ],
