add Operações em conjuntos

--- a/Coleções_Python_Iteraveis/Set.ipynb
+++ b/Coleções_Python_Iteraveis/Set.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 4,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.5  ('venv': venv)"
+   "display_name": "Python 3.9.5 64-bit ('venv': venv)"
   },
   "interpreter": {
    "hash": "325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3"
@@ -150,6 +150,140 @@
     "colecao = {1, 12, 33, 10, 2, 0}\n",
     "for numero in colecao:\n",
     "     print(numero)"
+   ]
+  },
+  {
+   "source": [
+    "<h2><font color=#00BFFF>Operações em conjuntos</font></h2>\n",
+    "<img src=\"Tabela operadores binários.png\">"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Operações em conjuntos - |(or)</font></h3>\n",
+    "Elementos que existem em um conjunto ou no outro"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{13, 15, 23, 42, 43, 56}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "x = {15,23,43,56}\n",
+    "y = {13,23,56,42}\n",
+    "\n",
+    "# numeros de x ou numeros de y (união de todos os números) \n",
+    "x | y"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Operações em conjuntos - &(and)</font></h3>\n",
+    "Elementos que existem em ambos conjuntos"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{23, 56}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "x = {15,23,43,56}\n",
+    "y = {13,23,56,42}\n",
+    "\n",
+    "# numeros de x e y iguais \n",
+    "x & y"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Operações em conjuntos - </font></h3>\n",
+    "Elementos que existem no primeiro conjunto e que NÃO estão no segundo conjunto"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "x - y = {43, 15}\ny - x = {42, 13}\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = {15,23,43,56}\n",
+    "y = {13,23,56,42}\n",
+    "\n",
+    "# numeros de x que não estao em y \n",
+    "print(f'x - y = {x-y}')\n",
+    "print(f'y - x = {y-x}')"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Operações em conjuntos ^(or exclusive) </font></h3>\n",
+    "Elementos que existem somente no primeiro conjunto e elementos que existem somente no segundo conjunto"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{13, 15, 42, 43}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "x = {15,23,43,56}\n",
+    "y = {13,23,56,42}\n",
+    "\n",
+    "# numeros de x que so existe em x e y que so existe em y \n",
+    "x ^ y"
    ]
   }
  ]
