--- a/Coleções_Python_Iteraveis/Set.ipynb
+++ b/Coleções_Python_Iteraveis/Set.ipynb
@@ -154,6 +154,56 @@
   },
   {
    "source": [
+    "<h3><font color=#DAA520>Criando um conjunto imutável de conjunto com frozenset()</font></h3>\n",
+    "\n",
+    "A função frozenset() retorna um objeto frozenset imutável inicializado com elementos do iterável fornecido. \n",
+    "\n",
+    "O conjunto congelado é apenas uma versão imutável de um objeto de conjunto do Python. Embora os elementos de um conjunto possam ser modificados a qualquer momento, os elementos do conjunto congelado permanecem os mesmos após a criação.\n",
+    "\n",
+    "Devido a isso, os conjuntos congelados podem ser usados ​​como chaves no Dicionário ou como elementos de outro conjunto. Mas, como os conjuntos, não é ordenado (os elementos podem ser definidos em qualquer índice)."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{1, 2, 3} - type(<class 'set'>)\n{1, 2, 3, 5} - adicionamos um elemento, conjunto mutavel!\nfrozenset({1, 2, 3, 5}) - type(<class 'frozenset'>)\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'frozenset' object has no attribute 'add'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-38a2679ca13a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'{colecao} - type({type(colecao)})'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mcolecao\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'frozenset' object has no attribute 'add'"
+     ]
+    }
+   ],
+   "source": [
+    "colecao = {1, 2, 3}\n",
+    "print(f'{colecao} - type({type(colecao)})')\n",
+    "\n",
+    "colecao.add(5)\n",
+    "print(f'{colecao} - adicionamos um elemento, conjunto mutavel!')\n",
+    "\n",
+    "colecao = frozenset(colecao)\n",
+    "print(f'{colecao} - type({type(colecao)})')\n",
+    "\n",
+    "colecao.add(5) # como agora nosso conjunto é imutável não conseguimos adicionar um elemento"
+   ]
+  },
+  {
+   "source": [
     "<h2><font color=#00BFFF>Operações em conjuntos</font></h2>\n",
     "<img src=\"Tabela operadores binários.png\">"
    ],
