--- a/Coleções_Python_Iteraveis/Strings.ipynb
+++ b/Coleções_Python_Iteraveis/Strings.ipynb
@@ -60,6 +60,42 @@
   },
   {
    "source": [
+    "<h3><font color=#DAA520>split()</font></h3>\n",
+    "O método split() divide uma string no separador especificado e retorna uma lista de strings."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['Love', 'thy', 'neighbor']\n['Milk', 'Chicken', 'Bread']\n['Milk, Chicken, Bread']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text= 'Love thy neighbor'\n",
+    "\n",
+    "# splits at space\n",
+    "print(text.split())\n",
+    "\n",
+    "grocery = 'Milk, Chicken, Bread'\n",
+    "\n",
+    "# splits at ','\n",
+    "print(grocery.split(', '))\n",
+    "\n",
+    "# Splitting at ':'\n",
+    "print(grocery.split(':'))"
+   ]
+  },
+  {
+   "source": [
     "<h2><font color=#00BFFF>.find() .rfind</font></h2>\n",
     "<h2><font color=#00BFFF>Buscando um caracter em uma string - .find() .rfind</font></h2>\n",
     "\n",
@@ -425,6 +461,87 @@
     "indice_valor = indice_curso + len(\"curso\") + 1\n",
     "valor = url[indice_valor:]\n",
     "print(valor)"
+   ]
+  },
+  {
+   "source": [
+    "<h2><font color=#00BFFF>String + split + set. Verificando palavras sem se repetir em um texto</font></h2>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'Então',\n",
+       " 'Mas',\n",
+       " 'append',\n",
+       " 'apêndice',\n",
+       " 'assim',\n",
+       " 'bolão',\n",
+       " 'colocar',\n",
+       " 'começo',\n",
+       " 'como',\n",
+       " 'conjunto',\n",
+       " 'conjuntos',\n",
+       " 'de',\n",
+       " 'dentro',\n",
+       " 'e',\n",
+       " 'ele',\n",
+       " 'elementos',\n",
+       " 'em',\n",
+       " 'executar',\n",
+       " 'falamos',\n",
+       " 'faz',\n",
+       " 'fim',\n",
+       " 'final',\n",
+       " 'fora',\n",
+       " 'imaginar',\n",
+       " 'inicial',\n",
+       " 'início',\n",
+       " 'lá',\n",
+       " 'mas',\n",
+       " 'meio',\n",
+       " 'no',\n",
+       " 'nome',\n",
+       " 'não',\n",
+       " 'o',\n",
+       " 'os',\n",
+       " 'padrão',\n",
+       " 'por',\n",
+       " 'porque',\n",
+       " 'posição',\n",
+       " 'quando',\n",
+       " 'que',\n",
+       " 'sabemos',\n",
+       " 'se',\n",
+       " 'sentido',\n",
+       " 'tem',\n",
+       " 'temos',\n",
+       " 'tentarmos',\n",
+       " 'um',\n",
+       " 'é'}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "texto = 'Mas quando falamos de conjuntos, falamos meio que não tem início e fim, não tem posição inicial e posição final, tem os elementos lá dentro, em um bolão, é assim que temos que imaginar que um conjunto é por fora, não sabemos como é que ele é por dentro. Então não faz sentido o nome append, se tentarmos executar o nome não é append, porque append é um apêndice, é colocar no final, mas o conjunto, por padrão, não tem começo e final, ele tem os elementos lá dentro.'\n",
+    "\n",
+    "pontuações = [',', '.', '!', '?']\n",
+    "\n",
+    "for pontuação in pontuações:\n",
+    "    texto = texto.replace(pontuação,'') # retirando as pontuações\n",
+    "\n",
+    "set(texto.split()) # separando o texto por espaço e colocando em um conjunto sem repetir as palavras"
    ]
   }
  ]
